...
                                                                <constraint firstAttribute="height" constant="14" id="JXf-qy-nYU"/>
                                                            </constraints>
                                                        </imageView>
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TQu-WQ-O8r">
                                                            <rect key="frame" x="267.33333333333331" y="22.666666666666668" width="30.666666666666686" height="16.000000000000004"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NEW!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVA-bH-wuC">
                                                                    <rect key="frame" x="2" y="2" width="26.666666666666668" height="12"/>
                                                                    <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="10"/>
                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                            </subviews>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Custom Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U4O-0L-4v9">
                                                <rect key="frame" x="0.0" y="30" width="358" height="19.333333333333329"/>
                                                <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="16"/>
                                                <color key="textColor" name="Txt10"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="No Custom Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="TQh-in-HjU" customClass="
                                                <rect key="frame" x="0.0" y="55.333333333333314" width="358" height="34"/>
                                                <color key="backgroundColor" name="BG4"/>
                                                <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="E7v-2r-lkx"/>
                                    <constraint firstAttribute="width" constant="40" id="pyP-z2-Ibu"/>
                                </constraints>
                                <color key="tintColor" name="BGAlert4"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Delete"/>
                                <connections>
                                    <action selector="deleteButtonTapped:" destination="dXg-LT-sIm" eventType="touchUpInside" id="Bcw-Vl-dSw"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="gt0-eV-jml"/>
...
                                                        <color key="backgroundColor" name="BtnAlert1"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="56" id="xI9-om-MNR"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                        <state key="normal" title="Remove">
                                                            <color key="titleColor" name="TxTBtnAlert1"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="maskToBounds" value="YES"/>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="customCornerRadius">
                                                                <real key="value" value="12"/>
...
                            <constraint firstItem="gZ1-Bf-g0z" firstAttribute="trailing" secondItem="dQf-s7-LVu" secondAttribute="trailing" id="7xh-iU-E6e"/>
                            <constraint firstAttribute="bottom" secondItem="dQf-s7-LVu" secondAttribute="bottom" id="8E2-QK-xD0"/>
                            <constraint firstItem="dQf-s7-LVu" firstAttribute="leading" secondItem="gZ1-Bf-g0z" secondAttribute="leading" id="KJR-yv-y0f"/>
                            <constraint firstItem="dQf-s7-LVu" firstAttribute="top" secondItem="gZ1-Bf-g0z" secondAttribute="top" constant="16" id="dHw-oe-NxL"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add Account" id="0mX-xa-pS7"/>
                    <connections>
                        <outlet property="tableView" destination="dQf-s7-LVu" id="7Qf-JG-1Pr"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="DlO-6H-0OJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
