...
		return false
	}
	
	private func menuFor(walletMetadata: WalletMetadata, hdWalletIndex: Int) -> UIMenu? {
		guard let vc = delegate else { return nil }
		
		let edit = UIAction(title: "Edit Name", image: UIImage(named: "Edit")?.resizedImage(size: CGSize(width: 26, height: 26))?.withTintColor(.colorNamed("BGB4"))) { [weak self] action in
			
			// Fetch from store, otherwise it will be stale data
			if let meta = DependencyManager.shared.walletList.metadata(forAddress: walletMetadata.address) {
				self?.delegate?.performSegue(withIdentifier: "rename", sender: meta)
			}
		}
...
			// Fetch from store, otherwise it will be stale data
			if let meta = DependencyManager.shared.walletList.metadata(forAddress: walletMetadata.address) {
				self?.delegate?.performSegue(withIdentifier: "migrate-ledger", sender: meta)
			}
		}
		
		let remove = UIAction(title: "Remove Wallet", image: UIImage(named: "Delete"), attributes: .destructive) { [weak self] action in
			
			// Fetch from store, otherwise it will be stale data
			if let meta = DependencyManager.shared.walletList.metadata(forAddress: walletMetadata.address) {
				self?.delegate?.performSegue(withIdentifier: "remove", sender: meta)
			}
		}
...
